# ya-mkdocs-template

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
theme/overrides/: main.html
