[tool.poetry]
name = "ya-mkdocs-template"
version = "0.1.0"
description = "My template for mkdocs repositories"
authors = ["LM <hi@leima.is>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5.8"
mkdocs-autorefs = "^0.5.0"
mkdocstrings = "^0.23.0"
mkdocs-with-pdf = "^0.9.3"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocs-bibtex = "^2.11.0"
mkdocs-exclude-search = "^0.6.6"
mkdocs-print-site-plugin = "^2.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
